.provarCaches/00D6C0000000xA6UAI/objects/sked__Resource_Shift__c.object
<CustomObject>
    <fields>
        <fullName>sked__Actual_End__c</fullName>
        <description>The actual time this shift ended.</description>
        <label>Actual End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sked__Actual_Start__c</fullName>
        <description>The actual time this shift started.</description>
        <label>Actual Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sked__Resource__c</fullName>
        <label>Resource</label>
        <referenceTo>sked__Resource__c</referenceTo>
        <relationshipLabel>Resource Shifts</relationshipLabel>
        <relationshipName>Resource_Shifts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>sked__Shift__c</fullName>
        <label>Shift</label>
        <referenceTo>sked__Shift__c</referenceTo>
        <relationshipLabel>Resource Shifts</relationshipLabel>
        <relationshipName>Resource_Shifts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Resource Shift</label>
    <nameField>
        <displayFormat>RSFT-{00000}</displayFormat>
        <label>Resource Shift Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Shifts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>